wisehands/mainpage/css/main-page.css
body, p, h1, h2, h3, h4, h5, h6, i {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', 'Helvetica', sans-serif;
    overflow-x: hidden;
}
body a {
    text-decoration: none;
    color: inherit;
}
#particles-js {
    position: absolute;
    width: 100%;
    height: 100vh;
    background-size: cover;
    background-position: 50% 50%;
    z-index: 100;
}
canvas {
    display: block;
    vertical-align: bottom;
}
header {
    background-color: rgb(14, 41, 53);
    height: 62px;
}
.main-container {
    max-width: 1200px;
    height: 100vh;
    margin: 0 auto;
    padding: 0 0.8rem;
}
.header-block {
    position: relative;
    top: 0;
    max-width: 1200px;
    display: flex;
    justify-content: space-between;
    height: 100%;
    margin: 0 auto;
    padding: 0.5rem;
    color: #fff;
    z-index: 350;
}
.header-logo, .header-links {
    display: flex;
    align-items: center;
}
.header-logo img {
    width: 60px;
    padding-right: 1rem;
}
.header-logo p {
    font-size: 2rem;
}
.header-links {
    width: 350px;
    justify-content: space-between;
}
.header-links a {
    text-decoration: none;
    color: #fff;
}
.header-links p {
    font-size: 1.3rem;
    padding: 0.6rem;
    cursor: pointer;
}
.header-links p:hover {
    color: lightseagreen;
}
.burger-menu {
    display: none;
    position: relative;
    top: 10px;
    right: 10px;
}
#overlay-mobile {
    display: none;
    background-color: rgba(0,0,0,0);
    width: 100%;
    height: 100%;
    position: fixed;
    z-index: 400;
    padding: 0;
    margin: 0;
}
.sidebar-mobile {
    width: 85%;
    height: 100%;
    background-color: rgba(255,255,255,1);
    opacity: 1;
    animation: sidebarmove 0.3s linear;
    position: fixed;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
}
@keyframes sidebarmove {
    from {
        opacity: 0;
        transform: translate3d(-100%, 0, 0);
    }
    to {
        opacity: 1;
        transform: translate3d(0, 0, 0);
    }
}
.sibebar-swipe-off {
    width: 0%;
    height: 100%;
    background-color: rgba(255,255,255,1);
    opacity: 1;
    transition-delay: 0.3s;
    animation: sidebarswipeoff 0.3s linear;
}
@keyframes sidebarswipeoff {
    from {
        transform: translate3d(0, 0, 0);
    }

    to {
        visibility: hidden;
        transform: translate3d(-100%, 0, 0);
    }
}
.sidebar-logo {
    display: flex;
    align-items: center;
    height: 58px;
    padding: 0.5rem;
}
.sidebar-logo img {
    width: 36px;
    height: 36px;
    padding-right: 0.7rem;
}
.sidebar-logo p {
    font-size: 2rem;
    margin-bottom: 0;
}
.sidebar-panel {
    display: flex;
    flex-direction: column;
    line-height: 2;
    padding: 10px;
    font-size: 1.2rem;
}
.sidebar-panel a {
    cursor: pointer;
    color: #262626;
    line-height: 2.5;
}
.sidebar-panel p {
    font-size: 1.3rem;
    margin-bottom: 0;
}
.main-page {
    background-color: rgb(14, 41, 53);
    height: calc(100vh - 62px);
}
.header-section {
    display: flex;
    flex-direction: column;
    height: 100vh;
}
.slogan {
    color: #fff;
    text-align: center;
    padding-top: 40vh ;
    position: relative;
    z-index: 300;
}
.slogan h1 {
    font-size: 2.4rem;
    text-transform: uppercase;
}
.slogan p {
    font-size: 2rem;
    font-family: 'Akkurat', sans-serif;
    padding: 1rem 0;
}
.slogan button {
    padding: 0.5rem;
    border: 2px solid #fff;
    background: none;
    color: #fff;
    text-transform: uppercase;
    margin: 1rem auto;
    z-index: 300;
    font-size: 1.7rem;
}
.slogan button:hover {
    border: 2px solid #fff;
    background-color: #fff;
    color: #0e2935;
    cursor: pointer;
}
.fe-services-block, .be-services-block, .mob-services-block, .projects-container, .team-container, .contact-container, .donate-container  {
    display: flex;
    flex-direction: column;
    height: 100vh;
    justify-content: space-between;
}
.fe-services {
    background: url("../images/85-original.jpg");
}
.be-services {
    background: url("../images/87-original.jpg");
}
.mob-services {
    background: url("../images/88-original.jpg");
}
.services-bg {
    height: 100vh;
    background-position: center;
    background-size: cover;
}
.contact-button {
    width: 250px;
    height: 60px;
    background-color: rgba(0,0,0,0.01);
    color: #fff;
    border: 2px solid #fff;
    text-transform: uppercase;
    padding: 1rem;
    cursor: pointer;
    font-size: 1.2rem;
    margin-left: 7rem;
    margin-right: 7rem;
    opacity: 0.7;
}
#toContactButtonMob, #betoContactButtonMob, #mobtoContactButtonMob {
    width: 200px;
    height: 50px;
    font-size: 1rem;
    margin: 1rem auto;
    cursor: pointer;
    display: none;
}
#toContactButton:hover, #betoContactButton:hover, #mobtoContactButton:hover {
    opacity: 1;
}
#betoContactButton, #betoContactButtonMob {
    color: #63533a;
    border: 2px solid #63533a;
}
#mobtoContactButton, #mobtoContactButtonMob {
    color: #75558d;
    border: 2px solid #75558d;
}
.services-icons {
    display: flex;
    align-items: center;
}
.be-services-icons {
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
}
.be-services-icons #toContactButton {
    margin-right: 6rem;
}
.services-h2 {
    font-family: 'Roboto', sans-serif;
    font-size: 4rem;
}
.services-p {
    font-size: 1.5rem;
    line-height: 1.5;
}
.fe-text, .mob-text {
    text-align: left;
    padding-top: 25vh;
}
.be-text {
    text-align: right;
    padding-top: 25vh;
}
.fe-text h2, .fe-text p {
    color: #fff;
}
.services-img img {
    width: 100px;
    padding: 1rem 1rem 0 0;
    filter: grayscale(100%);
    transition: 0.5s;
}
.services-img img:hover {
    filter: grayscale(0);
}
.be-text h2, .be-text p {
    color: #63533a;
}
.mob-text h2, .mob-text p {
    color: #75558d;
}
.projects {
    height: 100vh;
    background: url("../images/86-original.jpg");
    background-position: center;
    background-size: cover;
}
/* ... */

